# rewrite_xml

./: .gitignore  README.md  adding_values.py  config.py  my_time.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: checks.yaml
files/raw/: example.xml
src/: __init__.py  adding_values.py  config.py  my_time.py
tests/: test_adding_values.py
